--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -524,8 +524,76 @@ From equation \ref{lemma:1qubit:eq4}
 The equation \ref{lemma:1qubit:eq5},  can only be satisfied if $\beta_i = \beta_i^\prime$ for every $i\in[4],$ therefore,  $F_{C_q}=F_{C_q^\prime}.$
 
 
-\subsection{$Qi\mathcal{O} for $n$-qubit Circuits}
-In the previous section we showed that we can obfuscate any $1$-qubit unitary circuit via gate teleportation and quantum secure iO. Can we not construct a $Qi\mathcal{O}$ for any $n$-qubit unitary circuit using  the same methodology. Unfortunately, for any circuit $n>1,$ the complexity of 
+\subsection{$Qi\mathcal{O}$ for $n$-qubit Circuits}
+In the previous section we showed how we can construct a $Qi\mathcal{O}$  for any $1$-qubit unitary circuit. Can we not construct a $Qi\mathcal{O}$ for any $n$-qubit unitary circuit using iO gate teleportation and quantum secure iO?  As we will see that when $\cnot$ and $\tgate$-gates are mixed together then the second property ({\tt Polynomial Slowdown}) of $Qi\mathcal{O}$ is violated, therefore, the construction becomes infeasible. More precisely we will show that for any $n$-qubit circuit with $k$ number of $\tgate$-gates, $k\leq n,$ the correction unitary in the worst-case has $4^k$ terms,
+
+\begin{equation}
+\label{exp:nqubit-correction}
+\sum_{i=0}^{4^k-1} \beta_i \xgate^{b{i_1}} \zgate^{a{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a{i_n}},\; \beta_i\in\mathbb{C},\; a_{i,j},b_{i_j}\in\{0,1\}.
+\end{equation}
+
+Since, there are at most $2^{2n}$ bit strings of size $n,$ it follows from the expression \ref{exp:nqubit-correction} that for any $n$-qubit circuit the correction unitary can be written as a summation of at most $2^{2n}$ terms, i.e $4^k\leq 2^{2n}$ for any $k\in\mathbb{N}.$ Where $k$ is the number of $\tgate$-gates in the circuit. Note the size of coefficients $\beta_i$'s can grow with number of $\tgate$-gates (see Remark \ref{remark:nqubit-correction} )
+
+Let $C_q$ be an $n$-qubit circuit and $\ket{\psi}$ be an $n$-qubit state. If we want to evaluate $C_q$ on the state $\ket{\psi}$ using gate teleportation, then we are required to compute the correction unitary $U^\prime$ corresponding to $C_q$ (section \ref{protocol: gate  teleportation}) satisfying equation \ref{nqubit:eq6}.
+
+\begin{equation}
+\label{nqubit:eq6}
+ U^\prime C_q (\xgate^{a_{1}}\zgate^{b_{1}}\otimes \xgate^{a_{2}}\zgate^{b_{2}}\cdots \otimes \xgate^{a_{n}}\zgate^{b_{n}})(\ket{\psi})=C_qU(\ket{\psi}).
+\end{equation}
+
+
+Let's estimate how big correction unitary $U^\prime$ can grow. Suppose number of $\tgate$ gates in $C_q$ are $k$ for some non-negative integer $k\leq n.$ To simplify the analysis we assume that $\tgate$-gates are in the first $l$ wires of $C_q.$ \footnote{This restriction will not not affect our analysis see explanation below.} Note we must have $l\leq k.$ Then Every $j$-th wire  $\tgate$-gates in the worst-case can transform $\xgate^{a_{j}}\zgate^{b_{j}}$ 
+
+\begin{equation}
+\begin{aligned}
+\label{nqubit:eq7}
+\tgate(\xgate^{a_{j}}\zgate^{b_{j}})\mapsto \left(\lambda_{j_0} \igate + \lambda_{j_1} \xgate + \lambda_{j_2} \zgate + \lambda_{j_3} \xgate \zgate \right)\tgate=\left(\sum_{i=0}^3 \lambda_{j_i} \xgate^{a_{i}^\prime}\zgate^{b_{i}^\prime}\right)\tgate\\
+% =\sum_{i=0}^3\lambda_i \xgate^{a_{i}^\prime}\zgate^{b_{i}^\prime},
+ \end{aligned}
+\end{equation}
+where $\lambda_{j_i}\in\mathbb{C}, $  $a_{i}^\prime, b_{i}^\prime \in\{0,1\}$ for $0\leq i\leq 3$ and $0\leq j\leq l.$ we can rewrite equation \ref{nqubit:eq6} as 
+
+
+\begin{equation}
+\label{nqubit:eq8}
+\begin{aligned}
+ C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}\ket{\psi}= \left(\sum_{i=0}^3 \lambda_{j_i} \xgate^{a_{i}^\prime}\zgate^{b_{i}^\prime}\right)^{\otimes_{i=1}^{l}} \otimes \left(\xgate^{a_{i}^\prime}\zgate^{b_{i}^\prime}\right)^{\otimes_{i=l+1}^{n}}\\
+\end{aligned}
+\end{equation}
+Using identity \ref{nqubit:identity} we can write equation \ref{nqubit:eq8} as
+
+ 
+\begin{equation}
+\label{nqubit:eq9}
+\begin{aligned}
+C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}=\left(\sum_{j=0}^{4^l} \beta_j \xgate^{b_{j1}}\zgate^{a_{j1}} \otimes \cdots \otimes\xgate^{b_{jl}}\zgate^{a_{jl}}\right) \otimes \left(\xgate^{a_{i}^\prime}\zgate^{b_{i}^\prime}\right)^{\otimes_{i=l+1}^{n}}, \\
+ =\left(\sum_{j=0}^{4^{l}-1} \beta_j \xgate^{b_{j1}^\prime}\zgate^{a_{j1}^\prime} \otimes \cdots \otimes\xgate^{b_{jl}^\prime}\zgate^{a_{jl}^\prime} \otimes \xgate^{a_{l+1}^\prime}\zgate^{b_{l+1}^\prime}  \otimes \cdots   \otimes\xgate^{a_{n}^\prime}\zgate^{b_{n}^\prime}\right)
+ \end{aligned}
+\end{equation}
+where $\beta_j\in \mathbb{C}$ for $0\leq j\leq 4^l-1.$  Recall that $k$ denote the number of $\tgate$-gates and $l\leq k,$ therefore in the worst case the correction unitary can have $4^k$ terms. Note the restriction that $\tgate$-gates are in the first $l$ wires of the circuit has no affect on our analysis. This because, any permutation of the wires in the circuit will give us $l$ terms of form $\sum_{i=0}^3 \lambda_{j_i} \xgate^{a_{j_i}^\prime} \zgate^{b_{j_i}^\prime}$ and $n-l$ terms of the form 
+$\xgate^{a_{i}^\prime} \zgate^{b_{i}^\prime}.$  And the tensor product of these terms in any order will result into a unitary in the worst-case of form
+
+\begin{equation}
+\sum_{i=0}^{4^k-1} \beta_i \xgate^{b{i_1}} \zgate^{a{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a{i_n}},\; \beta_i\in\mathbb{C},\; a_{i_j},b_{i_j}\in\{0,1\}.
+\end{equation}
+
+
+Therefore, if the number of $\tgate$-gates $k\in O(\log(|C_q|),$ then number of terms in the correction unitary remain polynomial in $|C_q|.$ 
+
+
+
+\begin{remark}
+\label{remark:nqubit-correction}
+Note for any $n$-qubit circuit the corresponding  correction unitary can also be written as sum of at most $2^{2n}$ terms, regardless how many $\tgate$-gates  a circuit has. To realize this suppose we have 
+$$C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}=\left(\sum_{j=0}^{l} \beta_j \xgate^{b_{j1}}\zgate^{a_{j1}} \otimes \cdots \otimes\xgate^{b_{jl}}\zgate^{a_{jl}} \otimes \xgate^{a_{l+1}^\prime}\zgate^{b_{l+1}^\prime}  \otimes \cdots   \otimes\xgate^{a_{n}^\prime}\zgate^{b_{n}^\prime}\right)$$
+for some integer $l>2^{2n}.$
+But since, there are at most $2^{2n}$ bit strings of size $2n,$ by pigeon hole principle we must have at least $2n-l$ terms that have common binary strings and by adding these terms we are guaranteed to have every unitary can be written with at most $2^{2n}$ terms. This means that if the number of terms in the correction unitary grows exponentially (in worst-case) in the number of $\tgate$-gates $k$ as far as $k\geq n.$ Note the size of the coefficients $\beta_i$ is a function of $\tgate$-gates and will be affected as number of $\tgate$-gates increases. So if there are exponentially many $\tgate$-gates then the size of the $\beta_i$ can also also grow exponentially. It is also important to note that for a uniform family of quantum circuits 
+$\mathcal{C}_q=\{C_{q_n}\mid n\in \mathbb{N}\}$ there exist a $poly(n)$ such that for every $C_{q_n}\in \mathcal{C}_q,$ imply $|C_{q_n}|\leq poly(n).$ Otherwise we can add $\igate$-gates to any circuit such that the $|C_q|\geq 2^{2n},$ and then obfuscate any circuit with polynomially many $\tgate$-gates.
+\end{remark}
+
+
+
+
 
 
 
